feat: Close notification on button click & notification UI change

--- a/src/App.less
+++ b/src/App.less
@@ -13,13 +13,12 @@
     z-index: 1;
     font-size: 0.8rem;
     display: inline-block;
-    padding: 0.4rem;
+    padding: 1.8rem 1.5rem 1rem 1rem;
     border-radius: 5px;
-    background-color: #c8c8c8;
+    background-color: #ffffff;
     color: rgb(0, 0, 0);
     top: 0;
     right: 0;
-    padding: 1rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.2s ease-in-out;
 
@@ -32,14 +31,12 @@
       transform: translateY(-30%);
     }
 
-    // .triangle {
-    //   width: 0;
-    //   height: 0;
-    //   border-top: 5px solid transparent;
-    //   border-bottom: 5px solid transparent;
-    //   border-right: 5px solid #363636;
-    //   transform: translate(-0.7rem, 0.6rem);
-    // }
+    .closeIcon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 0.7rem;
+    }
   }
 }
 
